...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="80dp">

                <ListView
                    android:id="@+id/modes_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:choiceMode="singleChoice"
                    android:textColor="@color/CardViewTextColor" />
            </LinearLayout>

...
